crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_accept_refused_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 9 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │f1  M  +2 −1                           [A accept file] [U restore file]│"
"│  main · 3 files          │@@ -1,4 +1,4 @@                         [a accept] [u restore] [m flag]│"
"│  M f1  +2 −1             │-a1                                                                    │"
"│  M f2  +1 −0             │+A1                                                                    │"
"│  M parse.rs  +10 −2      │ a2                                                                    │"
"│──────────────────────────│ a3                                                                    │"
"│beta                      │ a4                                                                    │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │@@ -8,3 +8,4 @@                         [a accept] [u restore] [m flag]│"
"│  A u2  +2 −0  [mixed]    │ a8                                                                    │"
"│  [upstream] 1 file       │ a9                                                                    │"
"│──────────────────────────│ a10                                                                   │"
"│W/notes                   │+another edit, after the frame                                         │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"f1: changed since rendered; not accepted · 0s                                                       "
