crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_diff_selection_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 8 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │src/parse.rs  M  +10 −2                [A accept file] [U restore file]│"
"│  main · 3 files          │@@ -16,7 +18,7 @@                       [a accept] [u restore] [m flag]│"
"│  M f1  +1 −1             │     let mut out = Vec::new();                                         │"
"│  M f2  +1 −0             │     for (i, raw) in text.lines().enumerate() {                        │"
"│  M parse.rs  +10 −2      │         let line = raw.trim();                                        │"
"│──────────────────────────│-        if line.is_empty() || line.starts_with('#') {                 │"
"│beta                      │+        if line.is_empty() || line.starts_with('#') ||                │"
"│  main · 2 files          │+line.starts_with("//") {                                              │"
"│  A u1  +1 −0  [upstream] │             continue;                                                 │"
"│  A u2  +2 −0  [mixed]    │         }                                                             │"
"│  [upstream] 1 file       │         let Some((key, value)) = line.split_once('=') else {          │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │@@ -51,4 +53,10 @@                      [a accept] [u restore] [m flag]│"
"│  draft · 1 file          │         assert_eq!(records[0].key, "name");                           │"
"│  M n2.md  +2 −0          │         assert_eq!(records[0].line, 3);                               │"
"│                          │     }                                                                 │"
"│                          │+                                                                      │"
"│                          │+    #[test]                                                           │"
"│                          │+    fn lookup_takes_the_last_record() {                               │"
"│                          │+        let records = parse("a = 1\na = 2\n");                        │"
"│                          │+        assert_eq!(lookup(&records, "a"), Some("2"));                 │"
"│                          │+    }                                                                 │"
"│                          │ }                                                                     │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  t hide empty  ? help  q quit             "
