crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_diff_view_collapsed_expanded_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 4 files · 3 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │package-lock.json  M  +1,400 −1,400    [A accept file] [U restore file]│"
"│  main · 1 file           │collapsed (glob) · +1,400 −1,400                             [e expand]│"
"│  M pack… ⊟  +1,400 −1,400│@@ -1,1400 +1,600 @@                                           [m flag]│"
"│──────────────────────────│-    "pkg-0": { "version": "1.0.0" },                                  │"
"│beta                      │-    "pkg-1": { "version": "1.0.1" },                                  │"
"│  main · 2 files          │-    "pkg-2": { "version": "1.0.2" },                                  │"
"│  A u1  +1 −0  [upstream] │-    "pkg-3": { "version": "1.0.3" },                                  │"
"│  A u2  +2 −0  [mixed]    │-    "pkg-4": { "version": "1.0.4" },                                  │"
"│  [upstream] 1 file       │-    "pkg-5": { "version": "1.0.5" },                                  │"
"│──────────────────────────│-    "pkg-6": { "version": "1.0.6" },                                  │"
"│W/notes                   │-    "pkg-7": { "version": "1.0.7" },                                  │"
"│  draft · 1 file          │-    "pkg-8": { "version": "1.0.8" },                                  │"
"│  M n2.md  +2 −0          │-    "pkg-9": { "version": "1.0.9" },                                  │"
"│                          │-    "pkg-10": { "version": "1.0.10" },                                │"
"│                          │-    "pkg-11": { "version": "1.0.11" },                                │"
"│                          │-    "pkg-12": { "version": "1.0.12" },                                │"
"│                          │-    "pkg-13": { "version": "1.0.13" },                                │"
"│                          │-    "pkg-14": { "version": "1.0.14" },                                │"
"│                          │-    "pkg-15": { "version": "1.0.15" },                                │"
"│                          │-    "pkg-16": { "version": "1.0.16" },                                │"
"│                          │-    "pkg-17": { "version": "1.0.17" },                                │"
"│                          │-    "pkg-18": { "version": "1.0.18" },                                │"
"│                          │-    "pkg-19": { "version": "1.0.19" },                                │"
"│                          │-    "pkg-20": { "version": "1.0.20" },                                │"
"│                          │-    "pkg-21": { "version": "1.0.21" },                                │"
"│                          │… 800 lines omitted (cap 2,000)                                        │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a/A accept file  ^A accept all  z undo  t hide empty  ? help  q quit   "
